Create exercise no. 1 files - modal

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,6 +6,7 @@ $middle-gray: #747d88;
 $dark-gray: #3c444c;
 $dark-color: #30363d;
 $primary-color: #f27a54;
+$primary-color-transparent: rgba(242, 122, 84, 0.7);
 $secondary-color: #a154f2;
 $tertiary-color: #6fcf97;
 
