--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -1,3 +1,30 @@
+// Flex Container
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+// Grid Container
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 2rem;
+  padding: 2rem;
+  width: 100%;
+}
+
+// Cards
+.card {
+  display: grid;
+  justify-content: center;
+  grid-gap: 1rem;
+  background: $dark-gray;
+  padding: 2rem;
+  box-shadow: 0px 30px 40px rgba(0, 0, 0, 0.1);
+  border-radius: 6px;
+}
+
 // Buttons
 .btn {
   border: none;
