Do some array exercises

--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -23,6 +23,15 @@
     border: 1px solid #fff;
   }
 
+  &[disabled] {
+    opacity: 0.2;
+  }
+
+  &[disabled]:hover {
+    opacity: 0.2;
+    cursor: auto;
+  }
+
   &:hover {
     opacity: 0.7;
   }
