Add styling and start exercise no. 8 - shopping list

--- a/scss/_misc.scss
+++ b/scss/_misc.scss
@@ -11,3 +11,13 @@
   padding: 2rem;
   margin: 2rem;
 }
+
+// Shopping list container
+
+.shopping-list {
+  margin-top: 2rem;
+  padding: 2rem 5rem;
+  border-radius: 10px;
+  background: $dark-gray;
+  // color: $da;
+}
