--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -2,6 +2,7 @@
   border: none;
   font-family: $primary-font;
   font-weight: bold;
+  font-size: 1.4rem;
   line-height: 1.2;
   text-transform: uppercase;
   padding: 1.4rem 2rem;
@@ -21,6 +22,11 @@
   &-secondary {
     background: transparent;
     border: 1px solid #fff;
+  }
+
+  &-round {
+    background: $primary-color;
+    padding: 1rem 1.2rem;
   }
 
   &[disabled] {
